[gd_scene load_steps=37 format=3 uid="uid://bg23w27w22lxr"]

[ext_resource type="Texture2D" uid="uid://dtsmu32bn40rn" path="res://assets/brackeys_platformer_assets/sprites/knight.png" id="1_7xoee"]
[ext_resource type="Script" uid="uid://dkxqligkvgmtj" path="res://scripts/player.gd" id="1_hqe82"]
[ext_resource type="Texture2D" uid="uid://dpq8nrnquaer4" path="res://assets/Holy VFX 01 Impact2.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://u4efcbelx03e" path="res://assets/brackeys_platformer_assets/sprites/knightAttacking.png" id="3_fjrip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_fjrip")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_fjrip")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_fjrip")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_fjrip")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v6f6"]
atlas = ExtResource("1_7xoee")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1yxd"]
atlas = ExtResource("1_7xoee")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8bp"]
atlas = ExtResource("1_7xoee")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lxxn"]
atlas = ExtResource("1_7xoee")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrcoj"]
atlas = ExtResource("1_7xoee")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_7xoee")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_7xoee")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_7xoee")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_7xoee")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vqpi"]
atlas = ExtResource("1_7xoee")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ayi"]
atlas = ExtResource("1_7xoee")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_770jl"]
atlas = ExtResource("1_7xoee")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xilyo"]
atlas = ExtResource("1_7xoee")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0wel"]
atlas = ExtResource("1_7xoee")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdmc0"]
atlas = ExtResource("1_7xoee")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya30g"]
atlas = ExtResource("1_7xoee")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdwt2"]
atlas = ExtResource("1_7xoee")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqkte"]
atlas = ExtResource("1_7xoee")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eaf1"]
atlas = ExtResource("1_7xoee")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjx7d"]
atlas = ExtResource("1_7xoee")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sg0l"]
atlas = ExtResource("1_7xoee")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkx87"]
atlas = ExtResource("1_7xoee")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wenc0"]
atlas = ExtResource("1_7xoee")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uajdx"]
atlas = ExtResource("1_7xoee")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ixro"]
atlas = ExtResource("1_7xoee")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_76v08"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v6f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1yxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lxxn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrcoj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"roll",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vqpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ayi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xilyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0wel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdmc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya30g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdwt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqkte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eaf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjx7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sg0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkx87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wenc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uajdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ixro")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8ls1"]
size = Vector2(9, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_1wfnr"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
position = Vector2(-1, -12)
collision_layer = 135
collision_mask = 135
script = ExtResource("1_hqe82")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(-9, -11)
rotation = -2.96706
scale = Vector2(0.729871, 0.729871)
texture = ExtResource("2_qhqgy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_76v08")
animation = &"attack"
autoplay = "idle"

[node name="playerAttack" type="Area2D" parent="AnimatedSprite2D" groups=["playerAttack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/playerAttack"]
position = Vector2(11.5, 4)
shape = SubResource("RectangleShape2D_a8ls1")

[node name="playerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_1wfnr")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.09

[node name="FireCooldown" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(7, 5)

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_shape_entered" from="AnimatedSprite2D/playerAttack" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
